@@ -1,7 +1,7 @@
 
-R Under development (unstable) (2022-12-02 r83397) -- "Unsuffered Consequences"
+R Under development (unstable) (2022-12-18 r83471) -- "Unsuffered Consequences"
 Copyright (C) 2022 The R Foundation for Statistical Computing
-Platform: aarch64-apple-darwin22.1.0 (64-bit)
+Platform: aarch64-apple-darwin22.2.0 (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -122,8 +122,8 @@ List of 2
 +     "\n\t starting with 'is.' :\t  ",
 +     sum(grepl("^is\\.", ls.base[base.is.f])), "\n", sep = "")
 
-Number of all base objects:	1380
-Number of functions from these:	1336
+Number of all base objects:	1381
+Number of functions from these:	1337
 	 starting with 'is.' :	  53
 
 > ## R ver.| #{is*()}
@@ -1527,5 +1527,5 @@ sm     3    3    3    3    4    4    4    4    2     2     2
 > par(op)
 > 
 > cat("Time elapsed: ", proc.time() - .ptime, "\n")
-Time elapsed:  0.641 0.037 0.68 0 0 
+Time elapsed:  0.656 0.049 0.707 0 0 
 > 
